Limpieza de comentarios, organizadas etiquetas de algunas clases, reforzada la politica de contraseñas. Quitado generar token al registro de nuevo usuario. Arreglos de logs. Primera pasada de Sonar para mantenimiento de calidad del codigo.